k8s/apigw4conk8s/echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-1
  name: echo-1
  namespace: default
spec:
  ports:
  - port: 8080
    name: high
    protocol: TCP
    targetPort: 3000
  selector:
    app: echo-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-1
  name: echo-1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-1
  template:
    metadata:
      labels:
        app: echo-1
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
    spec:
      serviceAccountName: echo-1
      containers:
      - image: k8s.gcr.io/ingressconformance/echoserver:v0.0.1
        name: echo-1
        ports:
        - containerPort: 3000
