k8s/apigw4conk8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: http-echo
spec:
  hostnames:
    - echo.something
  # Defines the gateway listener.
  parentRefs:
  - name: gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: echo-1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: grants
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
